<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GOMH</string>
    <string name="app_path_photo">/GOMH/</string>
    <string name="app_db_name">GOMH.db</string>
    <string name="app_share_preference_name">GOMH</string>
    <string name="network_ip">http://gomh.gshp-apps.com</string>
    <string name="network_context">service/rest/</string>
    <string name="app_download_apk">https://s3-us-west-1.amazonaws.com/gshpapps/OBCiudadano/GOMH.apk</string>
    <string name="app_path_apk">/GOMH/GOMH.apk</string>
    <string name="network_header_name_application_json">Content-Type</string>
    <string name="network_header_application_json">application/json</string>
    <string name="network_header_multipart_data">multipart/form-data</string>
    <string name="network_sc_conflict">Sincronización fallida, intentelo\nmás tarde</string>
    <string name="network_sc_precondition_failed">Su contraseña ha caducado,¡debe actualizarlo!</string>
    <string name="network_sc_unauthorized">Verificar credenciales.</string>
    <string name="network_no_content">Uds. no cuenta con la siguiente información</string>
    <string name="network_error">Error de red, verifique su conexión o intentelo más tarde</string>
    <string name="network_server_disable">El servidor se encuentra en mantenimiento, Intentelo más tarde</string>
    <string name="network_forbidden">Su cuenta ha sido desactivada</string>
    <string name="network_header_token">X-AUTH-TOKEN</string>
    <string name="app_share_preference_toke_webservices">token_web_services</string>
    <string name="app_share_preference_privacy_politic">privacy_politic</string>
    <string name="app_share_preference_time_synch">time_synch</string>
    <string name="app_share_preference_user_account">user_account</string>
    <string name="app_share_preference_user_pass">user_pass</string>
    <string name="app_share_preference_count_unauthorized">count_unauthorized</string>
    <string name="app_share_preference_last_geo">last_geo</string>
    <string name="error_empty_user_name">Ingrese nombre de usuario</string>
    <string name="error_empty_password">Ingrese su contraseña</string>
    <string name="label_continue">CONTINUAR</string>
    <string name="label_next">SIGUIENTE</string>
    <string name="label_accept">ACEPTAR</string>
    <string name="label_cancel">CANCELAR</string>
    <string name="label_into">ENTRAR</string>
    <string name="label_training">CAPACITACIÓN</string>
    <string name="label_task">TAREA</string>
    <string name="erro_download">Error al descargar archivo.</string>
    <string name="dialog_download_file">DESCARGANDO ARCHIVO</string>
    <string name="loggin_hint_user">Nombre de usuario</string>
    <string name="loggin_hint_pass">Contraseña</string>
    <string name="dialog_account_delete_data">Ha cambiado de usuario, todos los datos anteriores seran eliminados\n ¿Desea continuar?</string>
    <string name="dialog_account">CREDENCIALES</string>
    <string name="dialog_synch">SINCRONIZACIÓN</string>
    <string name="dialog_generic">GÉNERICO</string>
    <string name="dialog_update_error">No se pudo actualizar, favor de verivicar su conexion a red y vuelva a intentarlo</string>
    <string name="dialog_politics">TÉRMINOS Y CONDICIONES</string>
    <string name="dialog_update_title">ACTUALIZAR</string>
    <string name="dialog_change_password">CAMBIO DE CONTRASEÑA</string>
    <string name="dialog_change_password_actual">Contraseña Actual:</string>
    <string name="dialog_change_password_new">Contraseña Nueva:</string>
    <string name="dialog_change_password_confirm">Confirmar Contraseña:</string>
    <string name="dialog_change_password_btn">CAMBIAR</string>
    <string name="app_share_preference_first_synch">first_synch</string>
    <string name="report_check_dont_provider">dont provider</string>
    <string name="app_bundle_name">bundle</string>
    <string name="postal_code">Código Postal:</string>
    <string name="suburb">COLONIA:</string>
    <string name="street">Calle:</string>
    <string name="number_out" tools:keep="@string/number_out">Número Exterior:</string>
    <string name="number_in" tools:keep="@string/number_in">Número Inerior:</string>
    <string name="numer_phone">TELÉFONO</string>
    <string name="labelcontact">INDIQUE SUS DATOS DE CONTACTO</string>
    <string name="email">CORREO ELECTRÓNICO</string>
    <string name="photo">TOMAR FOTO</string>
    <string name="street_between">ENTRE CALLES</string>
    <string name="delegacion">DELEGACIÓN</string>
    <string name="capt">CAPTAR</string>
    <string name="pub">PUBLICIDAD</string>
    <string name="finish_report">FIN DE REGISTRO</string>
    <string name="labelpublicity">COMPLETE LOS SIGUIENTES CAMPOS</string>
    <string name="labelobligatory">TODOS LOS CAMPOS SON OBLIGATORIOS</string>
    <string name="type_publicity">TIPO DE PUBLICIDAD</string>
</resources>