<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_publicity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_label"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_weight=".5"
        android:paddingLeft="4dp"
        android:text="@string/labelpublicity"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txt_label2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:paddingLeft="4dp"
        android:text="@string/labelobligatory"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_label_publicity"
            style="@style/style_Txt_publicity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/type_publicity" />

        <Spinner
            android:id="@+id/spn_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/txt_label_publicity"
            android:layout_weight="2" />

    </LinearLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:minHeight="50dp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="10dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">
            <TableRow>

            </TableRow>

            <TableRow android:layout_height="match_parent">

                <TextView
                    style="@style/style_Txt_publicity"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/street" />

                <EditText
                    android:id="@+id/edt_street"
                    style="@style/style_edt_publicity"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />

                <TextView
                    style="@style/style_Txt_publicity"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/postal_code" />

                <AutoCompleteTextView
                    android:id="@+id/edt_cp"
                    style="@style/style_edt_publicity"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:inputType="number" />


            </TableRow>

            <TableRow android:layout_height="wrap_content">

                <TextView
                    style="@style/style_Txt_publicity"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/delegacion" />

                <Spinner
                    android:id="@+id/edt_delegacion"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />
            </TableRow>

            <TableRow android:layout_height="match_parent">

                <TextView
                    style="@style/style_Txt_publicity"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/suburb" />

                <Spinner
                    android:id="@+id/spn_suburb"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />
            </TableRow>

            <TableRow android:layout_height="match_parent">
                <TextView
                    style="@style/style_Txt_publicity"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/number_out" />
                <EditText
                    android:id="@+id/edt_number_out"
                    style="@style/style_edt_publicity"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />

                <TextView
                    style="@style/style_Txt_publicity"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/number_in" />
                <EditText
                    android:id="@+id/edt_number_in"
                    style="@style/style_edt_publicity"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    />


            </TableRow>

            <TableRow android:layout_height="match_parent">

                <TextView
                    style="@style/style_Txt_publicity"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/street_between" />

                <EditText
                    android:id="@+id/edt_street_left"
                    style="@style/style_edt_publicity"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />


                <EditText
                    android:id="@+id/edt_street_right"
                    style="@style/style_edt_publicity"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />

            </TableRow>

            <TableRow>

                <TextView
                    style="@style/style_Txt_publicity"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/labelcontact"
                    android:textColor="@android:color/darker_gray" />

            </TableRow>

            <TableRow android:layout_height="match_parent">

                <TextView
                    style="@style/style_Txt_publicity"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/numer_phone" />

                <EditText
                    android:id="@+id/edt_number_phone"
                    style="@style/style_edt_publicity"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:inputType="number" />
            </TableRow>

            <TableRow android:layout_height="match_parent">

                <TextView
                    style="@style/style_Txt_publicity"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/edt_email"
                    style="@style/style_edt_publicity"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:inputType="textEmailAddress" />

            </TableRow>

            <TableRow android:layout_marginTop="4dp">

                <Button
                    android:id="@+id/btnPhoto"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/photo"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/labelSave"
                    android:textColor="@android:color/white" />

            </TableRow>


        </TableLayout>

    </ScrollView>


</LinearLayout>