<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/f_login">


    <RelativeLayout
        android:id="@+id/rlt_authentication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:elevation="2dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/edt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:background="@drawable/shape_login"
            android:hint="@string/loggin_hint_user"
            android:inputType="textPersonName"
            android:padding="@dimen/activity_horizontal_margin_middle"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/edt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_user_name"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/shape_login"
            android:hint="@string/loggin_hint_pass"
            android:inputType="textPassword"
            android:padding="@dimen/activity_horizontal_margin_middle"
            android:textColor="@color/colorPrimary" />


        <Button
            android:id="@+id/btn_sync"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_pass"
            android:layout_marginBottom="@dimen/activity_vertical_margin_double"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin_double"
            android:background="@drawable/shape_login"
            android:text="@string/label_into"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rltImageLogo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rlt_authentication">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/activity_horizontal_margin_double"
            android:scaleType="centerInside"
            android:src="@drawable/logo_login" />

        <TextView
            android:id="@+id/txtLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLogo"
            android:gravity="center"
            android:text="INGRESE SUS DATOS\nPARA INICIAR SESIÓN"
            android:textColor="@color/color_withe"
            android:textSize="@dimen/textSizeVeryBig" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rlyt_delete_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:elevation="2dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:visibility="gone">

        <TextView
            android:id="@+id/txt_message_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_account_delete_data"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_message_delete"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_sync_agree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/color_withe"
                android:text="@string/label_next"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/btn_sync_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/color_withe"
                android:text="@string/label_cancel"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlyt_sync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:elevation="2dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/id_progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:max="100"
            android:minWidth="5dp"
            android:progress="1"
            android:progressDrawable="@drawable/custom_progressbar" />

        <TextView
            android:id="@+id/txtPorcent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_progressbar"
            android:gravity="center"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtPorcent"
            android:layout_gravity="bottom"
            android:background="@color/color_withe"
            android:text="@string/label_continue"
            android:textColor="@color/colorPrimary"
            android:visibility="invisible" />
    </RelativeLayout>

</RelativeLayout>
