<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.go_sharp.gomh.MenuReport">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_generic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:background="@color/colorPrimary"
        android:showDividers="middle">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin_double">

            <LinearLayout
                android:id="@+id/opt1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgOpt1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@null"
                    android:src="@drawable/m_captar"
                    android:scaleType="centerInside" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin_middle"
                    android:gravity="center"
                    android:text="@string/capt"
                    android:textColor="@color/colorWhiteTxt"
                    android:textSize="@dimen/sizeTextNormal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/opt2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgOpt2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@null"
                    android:src="@drawable/m_publicidad"
                    android:scaleType="centerInside" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin_middle"
                    android:gravity="center"
                    android:text="@string/pub"
                    android:textColor="@color/colorWhiteTxt"
                    android:textSize="@dimen/sizeTextNormal" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin_double">

            <LinearLayout
                android:id="@+id/opt3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgOpt3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@null"
                    android:src="@drawable/exit2"
                    android:tint="@color/colorWhite"
                    android:scaleType="centerInside" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin_middle"
                    android:gravity="center"
                    android:text="@string/finish_report"
                    android:textColor="@color/colorWhiteTxt"
                    android:textSize="@dimen/sizeTextNormal" />

            </LinearLayout>
        </TableRow>
    </TableLayout>
</RelativeLayout>
